Add gross rent multiplier to key rent ratios

--- a/public/investment_properties_pages/key_rent_ratios.html
+++ b/public/investment_properties_pages/key_rent_ratios.html
@@ -26,4 +26,8 @@
     <span class="col-md-18">Capitalization Rate</span>
     <span class="col-md-6 align-right">{{cap_rate | percentage:2}}</span>
   </div>
+  <div id="gross-rent-multiplier" class="row">
+    <span class="col-md-18">Gross Rent Multiplier</span>
+    <span class="col-md-6 align-right">{{gross_rent_multiplier | number:2}}</span>
+  </div>
 </div>
