Add operating efficiency to key rent ratios

--- a/public/investment_properties_pages/key_rent_ratios.html
+++ b/public/investment_properties_pages/key_rent_ratios.html
@@ -30,4 +30,8 @@
     <span class="col-md-18">Gross Rent Multiplier</span>
     <span class="col-md-6 align-right">{{gross_rent_multiplier | number:2}}</span>
   </div>
+  <div id="operating-efficiency" class="row">
+    <span class="col-md-18">Expenses/Sq Ft (Op Efficiency)</span>
+    <span class="col-md-6 align-right">{{operating_efficiency | number:2}}</span>
+  </div>
 </div>
