Add expenses per unit to key rent ratios

--- a/public/investment_properties_pages/key_rent_ratios.html
+++ b/public/investment_properties_pages/key_rent_ratios.html
@@ -34,4 +34,8 @@
     <span class="col-md-18">Expenses/Sq Ft (Op Efficiency)</span>
     <span class="col-md-6 align-right">{{operating_efficiency | number:2}}</span>
   </div>
+  <div id="expenses-per-unit" class="row">
+    <span class="col-md-18">Expenses per Unit</span>
+    <span class="col-md-6 align-right">{{expenses_per_unit | currency:'$':0}}</span>
+  </div>
 </div>
