Add first year net cash flows and estimated gain on sale

--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -32,6 +32,8 @@
         <net-operating-income></net-operating-income>
         <cash-flow-from-operations></cash-flow-from-operations>
         <return-on-investment></return-on-investment>
+        <net-cash-flows></net-cash-flows>
+        <exit-scenarios></exit-scenarios>
       </div>
     </div>
   </div>
