Make bold the column headers for estimated exit price and gain on sale

--- a/public/investment_properties_pages/exit_scenarios.html
+++ b/public/investment_properties_pages/exit_scenarios.html
@@ -1,9 +1,9 @@
 <div id="exit-scenarios" class="top-padded">
   <div class="row">
     <div class="col-md-7 align-right"></div>
-    <div class="col-md-2 align-right">Exit Price</div>
-    <div class="col-md-3 align-right">Gain on Sale</div>
-    <div class="col-md-3 align-right">Cap Rate</div>
+    <div class="col-md-2 align-right column-header">Exit Price</div>
+    <div class="col-md-3 align-right column-header">Gain on Sale</div>
+    <div class="col-md-3 align-right column-header">Cap Rate</div>
   </div>
   <div class="row">
     <div class="col-md-5 align-center subsection-header">Est Exit Price/Gain on Sale - 1 Yr</div>
