--- a/public/investment_properties_pages/exit_scenarios.html
+++ b/public/investment_properties_pages/exit_scenarios.html
@@ -19,4 +19,11 @@
     <div class="col-md-3 align-right">{{third_year_gain_on_sale | currency:'$':0}}</div>
     <div class="col-md-3 align-right">{{cap_rate | percentage:2}}</div>
   </div>
+  <div class="row">
+    <div class="col-md-5 align-center subsection-header">Est Exit Price/Gain on Sale - 5 Yr</div>
+    <div class="col-md-2 align-right"></div>
+    <div class="col-md-2 align-right">{{fifth_year_exit_price | currency:'$':0}}</div>
+    <div class="col-md-3 align-right">{{fifth_year_gain_on_sale | currency:'$':0}}</div>
+    <div class="col-md-3 align-right">{{cap_rate | percentage:2}}</div>
+  </div>
 </div>
