Remove double border between section headers

--- a/public/investment_properties_pages/exit_scenarios.html
+++ b/public/investment_properties_pages/exit_scenarios.html
@@ -6,14 +6,14 @@
     <div class="col-md-3 align-right column-header">Cap Rate</div>
   </div>
   <div class="row">
-    <div class="col-md-5 align-center subsection-header">Est Exit Price/Gain on Sale - 1 Yr</div>
+    <div class="col-md-5 align-center subsection-header no-bottom-border">Est Exit Price/Gain on Sale - 1 Yr</div>
     <div class="col-md-2 align-right"></div>
     <div class="col-md-2 align-right">{{first_year_exit_price | currency:'$':0}}</div>
     <div class="col-md-3 align-right">{{first_year_gain_on_sale | currency:'$':0}}</div>
     <div class="col-md-3 align-right">{{cap_rate | percentage:2}}</div>
   </div>
   <div class="row">
-    <div class="col-md-5 align-center subsection-header">Est Exit Price/Gain on Sale - 3 Yr</div>
+    <div class="col-md-5 align-center subsection-header no-bottom-border">Est Exit Price/Gain on Sale - 3 Yr</div>
     <div class="col-md-2 align-right"></div>
     <div class="col-md-2 align-right">{{third_year_exit_price | currency:'$':0}}</div>
     <div class="col-md-3 align-right">{{third_year_gain_on_sale | currency:'$':0}}</div>
