--- a/public/investment_properties_pages/net_cash_flows.html
+++ b/public/investment_properties_pages/net_cash_flows.html
@@ -1,12 +1,12 @@
 <div id="net-cash-flows" class="top-padded">
   <div class="row">
-    <div class="col-md-5 align-center subsection-header">Net CFs from Investment - 1 Yr Exit</div>
+    <div class="col-md-5 align-center subsection-header no-bottom-border">Net CFs from Investment - 1 Yr Exit</div>
     <div class="col-md-2 align-right"></div>
     <div class="col-md-2 align-right">{{monthly_cash_flow | currency:'$':0}}</div>
     <div class="col-md-3 align-right">{{one_year_exit_net | currency:'$':0}}</div>
   </div>
   <div class="row">
-    <div class="col-md-5 align-center subsection-header">Net CFs from Investment - 3 Yr Exit</div>
+    <div class="col-md-5 align-center subsection-header no-bottom-border">Net CFs from Investment - 3 Yr Exit</div>
     <div class="col-md-2 align-right"></div>
     <div class="col-md-2 align-right">{{monthly_cash_flow | currency:'$':0}}</div>
     <div class="col-md-3 align-right" ng-repeat="net in three_year_exit_nets track by $index">{{net | currency:'$':0}}</div>
