--- a/public/investment_properties_pages/exit_scenarios.html
+++ b/public/investment_properties_pages/exit_scenarios.html
@@ -1,29 +1,37 @@
 <div id="exit-scenarios" class="top-padded">
-  <div class="row">
-    <div class="col-md-7 align-right"></div>
-    <div class="col-md-2 align-right column-header">Exit Price</div>
-    <div class="col-md-3 align-right column-header">Gain on Sale</div>
-    <div class="col-md-3 align-right column-header">Cap Rate</div>
+  <div class="col-md-15">
+    <div class="row">
+      <div class="col-md-10 align-right"></div>
+      <div class="col-md-4 align-right column-header">Exit Price</div>
+      <div class="col-md-5 align-right column-header">Gain on Sale</div>
+      <div class="col-md-5 align-right column-header">Cap Rate</div>
+    </div>
+    <div class="row">
+      <div class="col-md-8 align-center subsection-header no-bottom-border">Est Exit Price/Gain on Sale - 1 Yr</div>
+      <div class="col-md-2 align-right"></div>
+      <div class="col-md-4 align-right">{{first_year_exit_price | currency:'$':0}}</div>
+      <div class="col-md-5 align-right">{{first_year_gain_on_sale | currency:'$':0}}</div>
+      <div class="col-md-5 align-right">{{cap_rate | percentage:2}}</div>
+    </div>
+    <div class="row">
+      <div class="col-md-8 align-center subsection-header no-bottom-border">Est Exit Price/Gain on Sale - 3 Yr</div>
+      <div class="col-md-2 align-right"></div>
+      <div class="col-md-4 align-right">{{third_year_exit_price | currency:'$':0}}</div>
+      <div class="col-md-5 align-right">{{third_year_gain_on_sale | currency:'$':0}}</div>
+      <div class="col-md-5 align-right">{{cap_rate | percentage:2}}</div>
+    </div>
+    <div class="row">
+      <div class="col-md-8 align-center subsection-header">Est Exit Price/Gain on Sale - 5 Yr</div>
+      <div class="col-md-2 align-right"></div>
+      <div class="col-md-4 align-right">{{fifth_year_exit_price | currency:'$':0}}</div>
+      <div class="col-md-5 align-right">{{fifth_year_gain_on_sale | currency:'$':0}}</div>
+      <div class="col-md-5 align-right">{{cap_rate | percentage:2}}</div>
+    </div>
   </div>
-  <div class="row">
-    <div class="col-md-5 align-center subsection-header no-bottom-border">Est Exit Price/Gain on Sale - 1 Yr</div>
-    <div class="col-md-2 align-right"></div>
-    <div class="col-md-2 align-right">{{first_year_exit_price | currency:'$':0}}</div>
-    <div class="col-md-3 align-right">{{first_year_gain_on_sale | currency:'$':0}}</div>
-    <div class="col-md-3 align-right">{{cap_rate | percentage:2}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5 align-center subsection-header no-bottom-border">Est Exit Price/Gain on Sale - 3 Yr</div>
-    <div class="col-md-2 align-right"></div>
-    <div class="col-md-2 align-right">{{third_year_exit_price | currency:'$':0}}</div>
-    <div class="col-md-3 align-right">{{third_year_gain_on_sale | currency:'$':0}}</div>
-    <div class="col-md-3 align-right">{{cap_rate | percentage:2}}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-5 align-center subsection-header">Est Exit Price/Gain on Sale - 5 Yr</div>
-    <div class="col-md-2 align-right"></div>
-    <div class="col-md-2 align-right">{{fifth_year_exit_price | currency:'$':0}}</div>
-    <div class="col-md-3 align-right">{{fifth_year_gain_on_sale | currency:'$':0}}</div>
-    <div class="col-md-3 align-right">{{cap_rate | percentage:2}}</div>
+  <div id="irr" class="col-md-9">
+    <div class="row">
+      <div class="col-md-10 subsection-header">Annualized IRR - 1 Yr</div>
+      <div class="col-md-6 align-right">{{one_year_irr | percentage:2}}</div>
+    </div>
   </div>
 </div>
