Add IRR column header and change decimals for a few fields

--- a/public/investment_properties_pages/exit_scenarios.html
+++ b/public/investment_properties_pages/exit_scenarios.html
@@ -30,6 +30,10 @@
   </div>
   <div id="irr" class="col-md-9">
     <div class="row">
+      <div class="col-md-11 align-right"></div>
+      <div class="col-md-5 align-right column-header">IRR</div>
+    </div>
+    <div class="row">
       <div class="col-md-10 subsection-header">Annualized IRR - 1 Yr</div>
       <div class="col-md-6 align-right">{{one_year_irr | percentage:2}}</div>
     </div>
