--- a/public/investment_properties_pages/property_and_loan_information.html
+++ b/public/investment_properties_pages/property_and_loan_information.html
@@ -3,7 +3,7 @@
     <div class="col-md-24 subsection-header">Inputs</div>
   </div>
   <div id="land-cost" class="row">
-    <span class="col-md-18">Land Cost:</span>
+    <span class="col-md-18">Land Cost</span>
     <input class="col-md-6"
            type="text"
            name="land-cost-input"
@@ -11,7 +11,7 @@
            ng-model="rental_property.financing_and_income_assumption.land_cost"/>
   </div>
   <div id="building-cost" class="row">
-    <span class="col-md-18">Building Cost:</span>
+    <span class="col-md-18">Building Cost</span>
     <input class="col-md-6"
            type="text"
            name="building-cost-input"
@@ -19,7 +19,7 @@
            ng-model="rental_property.financing_and_income_assumption.building_cost"/>
   </div>
   <div id="improvements" class="row">
-    <span class="col-md-18">Improvements:</span>
+    <span class="col-md-18">Improvements</span>
     <input class="col-md-6"
            type="text"
            name="improvements-input"
@@ -27,7 +27,7 @@
            ng-model="rental_property.financing_and_income_assumption.improvements"/>
   </div>
   <div id="total-square-feet" class="row">
-    <span class="col-md-18">Total Square Feet:</span>
+    <span class="col-md-18">Total Square Feet</span>
     <input class="col-md-6"
            type="text"
            name="total-square-feet-input"
@@ -35,7 +35,7 @@
            ng-model="rental_property.financing_and_income_assumption.total_square_feet"/>
   </div>
   <div id="number-of-units" class="row">
-    <span class="col-md-18">Number of Units:</span>
+    <span class="col-md-18">Number of Units</span>
     <input class="col-md-6"
            type="text"
            format="number"
@@ -43,7 +43,7 @@
            ng-model="rental_property.financing_and_income_assumption.number_of_units"/>
   </div>
   <div id="average-monthly-rent" class="row">
-    <span class="col-md-18">Average Monthly Rent:</span>
+    <span class="col-md-18">Average Monthly Rent</span>
     <input class="col-md-6"
            type="text"
            name="average-monthly-rent-input"
@@ -51,7 +51,7 @@
            ng-model="rental_property.financing_and_income_assumption.average_monthly_rent_per_unit"/>
   </div>
   <div id="other-income" class="row">
-    <span class="col-md-18">Other Income:</span>
+    <span class="col-md-18">Other Income</span>
     <input class="col-md-6"
            type="text"
            name="other-income-input"
@@ -59,7 +59,7 @@
            ng-model="rental_property.financing_and_income_assumption.other_monthly_income"/>
   </div>
   <div id="equity-percentage" class="row">
-    <span class="col-md-18">Equity Percentage:</span>
+    <span class="col-md-18">Equity Percentage</span>
     <input class="col-md-6"
            type="text"
            name="equity-percentage-input"
@@ -67,7 +67,7 @@
            ng-model="rental_property.financing_and_income_assumption.equity_percentage"/>
   </div>
   <div id="loan-interest-rate" class="row">
-    <span class="col-md-18">Loan Interest Rate:</span>
+    <span class="col-md-18">Loan Interest Rate</span>
     <input class="col-md-6"
            type="text"
            name="loan-interest-rate-input"
@@ -76,7 +76,7 @@
            ng-model="rental_property.financing_and_income_assumption.loan_interest_rate"/>
   </div>
   <div id="amortization-period-in-years" class="row">
-    <span class="col-md-18">Amortization Period in Years:</span>
+    <span class="col-md-18">Amortization Period in Years</span>
     <input class="col-md-6"
            type="text"
            format="number"
