Make building, land, and improvement inputs not have decimals

--- a/public/investment_properties_pages/property_and_loan_information.html
+++ b/public/investment_properties_pages/property_and_loan_information.html
@@ -8,6 +8,8 @@
            type="text"
            name="land-cost-input"
            format="currency"
+           symbol="$"
+           decimals="0"
            ng-model="rental_property.financing_and_income_assumption.land_cost"/>
   </div>
   <div id="building-cost" class="row">
@@ -16,6 +18,8 @@
            type="text"
            name="building-cost-input"
            format="currency"
+           symbol="$"
+           decimals="0"
            ng-model="rental_property.financing_and_income_assumption.building_cost"/>
   </div>
   <div id="improvements" class="row">
@@ -24,6 +28,8 @@
            type="text"
            name="improvements-input"
            format="currency"
+           symbol="$"
+           decimals="0"
            ng-model="rental_property.financing_and_income_assumption.improvements"/>
   </div>
   <div id="total-square-feet" class="row">
