--- a/public/investment_properties_pages/net_operating_income.html
+++ b/public/investment_properties_pages/net_operating_income.html
@@ -33,4 +33,10 @@
     <div class="col-md-2 align-right">{{monthly_taxes | currency:'$':0}}</div>
     <div class="col-md-3 align-right" ng-repeat="taxes in annual_taxes track by $index">{{taxes | currency:'$':0}}</div>
   </div>
+  <div class="row">
+    <div class="col-md-5">Net Income After Taxes</div>
+    <div class="col-md-2"></div>
+    <div class="col-md-2 align-right">{{monthly_net_income_after_taxes | currency:'$':0}}</div>
+    <div class="col-md-3 align-right" ng-repeat="income in annual_net_income_after_taxes track by $index">{{income | currency:'$':0}}</div>
+  </div>
 </div>
