--- a/public/investment_properties_pages/cash_flow_from_operations.html
+++ b/public/investment_properties_pages/cash_flow_from_operations.html
@@ -3,6 +3,15 @@
     <div class="col-md-5 align-center subsection-header">Cash Flow from Operations</div>
   </div>
   <div class="row">
+    <div class="col-md-5">Net Income After Taxes</div>
+    <div class="col-md-2"></div>
+    <div class="col-md-2 align-right">{{monthly_net_income_after_taxes | currency:'$':0}}</div>
+    <div class="col-md-3 align-right"
+         ng-repeat="income in annual_net_income_after_taxes track by $index">
+      {{income | currency:'$':0}}
+    </div>
+  </div>
+  <div class="row">
     <div class="col-md-5">Total Cash Available for Loan Servicing</div>
     <div class="col-md-2"></div>
     <div class="col-md-2 align-right">{{cash_available | currency:'$':2}}</div>
