Remove 'Total' from Total Cash Available for Loan Servicing, and align the income tax rate to the right

--- a/public/investment_properties_pages/cash_flow_from_operations.html
+++ b/public/investment_properties_pages/cash_flow_from_operations.html
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-5">Total Cash Available for Loan Servicing</div>
+    <div class="col-md-5">Cash Available for Loan Servicing</div>
     <div class="col-md-2"></div>
     <div class="col-md-2 align-right">{{cash_available | currency:'$':2}}</div>
     <div class="col-md-3 align-right"
