--- a/public/investment_properties_pages/net_operating_income.html
+++ b/public/investment_properties_pages/net_operating_income.html
@@ -29,7 +29,7 @@
   </div>
   <div class="row">
     <div class="col-md-5">Income Tax Rate</div>
-    <div class="col-md-2">{{income_tax_rate | percentage:0}}</div>
+    <div class="col-md-2 align-right">{{income_tax_rate | percentage:0}}</div>
     <div class="col-md-2 align-right">{{monthly_taxes | currency:'$':0}}</div>
     <div class="col-md-3 align-right" ng-repeat="taxes in annual_taxes track by $index">{{taxes | currency:'$':0}}</div>
   </div>
