Add depreciation to cash flow from operations

--- a/public/investment_properties_pages/cash_flow_from_operations.html
+++ b/public/investment_properties_pages/cash_flow_from_operations.html
@@ -12,6 +12,16 @@
     </div>
   </div>
   <div class="row">
+    <div class="col-md-5">Depreciation Expenses</div>
+    <div class="col-md-2"></div>
+    <div class="col-md-2 align-right">{{monthly_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
+    <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
+  </div>
+  <div class="row">
     <div class="col-md-5">Cash Available for Loan Servicing</div>
     <div class="col-md-2"></div>
     <div class="col-md-2 align-right">{{cash_available | currency:'$':2}}</div>
