--- a/public/investment_properties_pages/cash_flow_from_operations.html
+++ b/public/investment_properties_pages/cash_flow_from_operations.html
@@ -22,11 +22,11 @@
     <div class="col-md-3 align-right">{{annual_building_depreciation | currency:'$':0}}</div>
   </div>
   <div class="row">
-    <div class="col-md-5">Cash Available for Loan Servicing</div>
+    <div class="col-md-5">Total CF from Operations</div>
     <div class="col-md-2"></div>
-    <div class="col-md-2 align-right">{{cash_available | currency:'$':2}}</div>
+    <div class="col-md-2 align-right">{{monthly_total_cf_from_operations | currency:'$':0}}</div>
     <div class="col-md-3 align-right"
-         ng-repeat="cash in annual_cash_available track by $index">
+         ng-repeat="cash in annual_total_cf_from_operations track by $index">
       {{cash | currency:'$':0}}
     </div>
   </div>
@@ -37,6 +37,15 @@
     <div class="col-md-3 align-right"
          ng-repeat="interest in annual_interest_on_loan track by $index">
       {{interest | currency:'$':2}}
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-5">Cash Available for Loan Servicing</div>
+    <div class="col-md-2"></div>
+    <div class="col-md-2 align-right">{{cash_available | currency:'$':2}}</div>
+    <div class="col-md-3 align-right"
+         ng-repeat="cash in annual_cash_available track by $index">
+      {{cash | currency:'$':0}}
     </div>
   </div>
   <div class="row">
@@ -69,7 +78,7 @@
     <div class="col-md-2 align-right">{{monthly_total_return | currency:'$':0}}</div>
     <div class="col-md-3 align-right" ng-repeat="year in annual_total_returns track by $index">{{year | currency:'$':0}}</div>
   </div>
-  <div class="row">
+  <div class="row top-padded">
     <div class="col-md-5">CF/Debt Servicing Ratio</div>
     <div class="col-md-2"></div>
     <div class="col-md-2 align-right">{{monthly_cf_debt_servicing_ratio | percentage:2}}</div>
