--- a/public/investment_properties_pages/net_operating_income.html
+++ b/public/investment_properties_pages/net_operating_income.html
@@ -9,7 +9,7 @@
     <div class="col-md-5">Interest on Loan</div>
     <div class="col-md-2 align-right">{{monthly_interest_on_loan_percentage | percentage:1}}</div>
     <div class="col-md-2 align-right">{{monthly_interest_on_loan | currency}}</div>
-    <div class="col-md-3 align-right" ng-repeat="interest_payment in annual_interest_on_loan track by $index">{{interest_payment | currency}}</div>
+    <div class="col-md-3 align-right" ng-repeat="interest_payment in annual_interest_on_loan track by $index">{{interest_payment | currency:'$':0}}</div>
   </div>
   <div class="row">
     <div class="col-md-5">Depreciation Expenses - Building</div>
