--- a/public/investment_properties_pages/cash_flow_from_operations.html
+++ b/public/investment_properties_pages/cash_flow_from_operations.html
@@ -6,10 +6,7 @@
     <div class="col-md-5">Net Income After Taxes</div>
     <div class="col-md-2"></div>
     <div class="col-md-2 align-right">{{monthly_net_income_after_taxes | currency:'$':0}}</div>
-    <div class="col-md-3 align-right"
-         ng-repeat="income in annual_net_income_after_taxes track by $index">
-      {{income | currency:'$':0}}
-    </div>
+    <div class="col-md-3 align-right" ng-repeat="income in annual_net_income_after_taxes track by $index">{{income | currency:'$':0}}</div>
   </div>
   <div class="row">
     <div class="col-md-5">Depreciation Expenses</div>
@@ -25,28 +22,19 @@
     <div class="col-md-5">Total CF from Operations</div>
     <div class="col-md-2"></div>
     <div class="col-md-2 align-right">{{monthly_total_cf_from_operations | currency:'$':0}}</div>
-    <div class="col-md-3 align-right"
-         ng-repeat="cash in annual_total_cf_from_operations track by $index">
-      {{cash | currency:'$':0}}
-    </div>
+    <div class="col-md-3 align-right" ng-repeat="cash in annual_total_cf_from_operations track by $index">{{cash | currency:'$':0}}</div>
   </div>
   <div class="row">
     <div class="col-md-5">Interest on Loan</div>
     <div class="col-md-2"></div>
-    <div class="col-md-2 align-right">{{monthly_interest_on_loan | currency:'$':2}}</div>
-    <div class="col-md-3 align-right"
-         ng-repeat="interest in annual_interest_on_loan track by $index">
-      {{interest | currency:'$':2}}
-    </div>
+    <div class="col-md-2 align-right">{{monthly_interest_on_loan | currency:'$':0}}</div>
+    <div class="col-md-3 align-right" ng-repeat="interest in annual_interest_on_loan track by $index"> {{interest | currency:'$':0}}</div>
   </div>
   <div class="row">
     <div class="col-md-5">Cash Available for Loan Servicing</div>
     <div class="col-md-2"></div>
     <div class="col-md-2 align-right">{{cash_available | currency:'$':2}}</div>
-    <div class="col-md-3 align-right"
-         ng-repeat="cash in annual_cash_available track by $index">
-      {{cash | currency:'$':0}}
-    </div>
+    <div class="col-md-3 align-right" ng-repeat="cash in annual_cash_available track by $index"> {{cash | currency:'$':0}}</div>
   </div>
   <div class="row">
     <div class="col-md-5">Debt Service</div>
@@ -62,9 +50,7 @@
     <div class="col-md-5">Remaining CF from Operations</div>
     <div class="col-md-2"></div>
     <div class="col-md-2 align-right">{{monthly_cf_remaining | currency:'$':0}}</div>
-    <div class="col-md-3 align-right" ng-repeat="cash in annual_cfs_remaining track by $index">
-      {{cash | currency:'$':0}}
-    </div>
+    <div class="col-md-3 align-right" ng-repeat="cash in annual_cfs_remaining track by $index">{{cash | currency:'$':0}}</div>
   </div>
   <div class="row">
     <div class="col-md-5">Plus Principal Reduction</div>
