--- a/public/investment_properties_pages/rental_properties.html
+++ b/public/investment_properties_pages/rental_properties.html
@@ -1,6 +1,14 @@
-<div class="container">
+<div class="container" ng-controller="RentalPropertiesListController">
   <table class="table table-striped table-hover">
     <thead>
+    <tr class="row">
+      <td class="col-md-2 subsection-header align-left"></td>
+      <td class="col-md-1 subsection-header align-left"></td>
+      <td class="col-md-1 subsection-header align-left"></td>
+      <td class="col-md-1 subsection-header align-left">
+        <button class="btn btn-primary" ng-click="show_add_property_row()">New Property</button>
+      </td>
+    </tr>
     <tr class="row">
       <td class="col-md-2 subsection-header align-left">Street</td>
       <td class="col-md-1 subsection-header align-left">City</td>
@@ -9,6 +17,53 @@
     </tr>
     </thead>
     <tbody>
+    <tr id="new-property-row" class="row rental-property-summary" ng-if="show_new_property_row">
+      <td class="row" colspan="4">
+        <div class="column-header dark-gray">New Property</div>
+        <table>
+          <tr>
+            <td colspan="4" class="col-md-6 align-left">
+              <div class="row bottom-padded">
+                <div class="col-md-5 less-spaced">
+                  <input class="col-md-12"
+                         type="text"
+                         name="new_property_street"
+                         placeholder="1524 Mulberry Street"
+                         ng-model="new_property.street">
+                </div>
+                <div class="col-md-3 less-spaced">
+                  <input class="col-md-12"
+                         type="text"
+                         name="new_property_city"
+                         placeholder="Fruitvale"
+                         ng-model="new_property.city">
+                </div>
+                <div class="col-md-2 less-spaced">
+                  <input class="col-md-12"
+                         type="text"
+                         name="new_property_state"
+                         placeholder="CA"
+                         ng-model="new_property.state">
+                </div>
+                <div class="col-md-2 less-spaced">
+                  <input class="col-md-12"
+                         type="text"
+                         name="new_property_zip"
+                         placeholder="94212"
+                         ng-model="new_property.zip_code">
+                </div>
+              </div>
+            </td>
+          </tr>
+          <tr class="row top-padded">
+            <td colspan="4" class="col-md-12 align-right">
+              <button class="btn btn-secondary btn-sm" ng-click="cancel()">Cancel</button>
+              <button class="btn btn-primary btn-sm" ng-click="save_new_property()">Create</button>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
     <tr rental-property-summary="property" ng-repeat="property in rental_properties"></tr>
     </tbody>
   </table>
