Delete a property by clicking the 'X' in that property's row

--- a/public/investment_properties_pages/rental_property.html
+++ b/public/investment_properties_pages/rental_property.html
@@ -1,6 +1,6 @@
 <div id="financing-and-income-assumptions" class="container grid-24-across">
   <div class="row">
-    <button ng-click="save()">Save</button>
+    <button class="btn btn-primary btn-sm" ng-click="save()">Save</button>
     <div>{{persistenceState}}</div>
   </div>
   <div class="row">
