Draw a thin border around inputs when focused, blur and reset to the old value when hitting escape, and save the number when hitting tab or enter.

--- a/public/investment_properties_pages/income_and_cost_projections.html
+++ b/public/investment_properties_pages/income_and_cost_projections.html
@@ -6,30 +6,35 @@
     <div class="col-md-9">Rent Increases</div>
     <input class="col-md-3 align-right"
            type="text"
+           id="year-one-rent-increases-input"
            name="year-one-rent-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.rent_increases[0]"/>
     <input class="col-md-3 align-right"
            type="text"
+           id="year-two-rent-increases-input"
            name="year-two-rent-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.rent_increases[1]"/>
     <input class="col-md-3 align-right"
            type="text"
+           id="year-three-rent-increases-input"
            name="year-three-rent-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.rent_increases[2]"/>
     <input class="col-md-3 align-right"
            type="text"
+           id="year-four-rent-increases-input"
            name="year-four-rent-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.rent_increases[3]"/>
     <input class="col-md-3 align-right"
            type="text"
+           id="year-five-rent-increases-input"
            name="year-five-rent-increases-input"
            format="percentage"
            decimals="1"
@@ -39,30 +44,35 @@
     <div class="col-md-9">Op Exp Increases</div>
     <input class="col-md-3 align-right"
            type="text"
+           id="year-one-operating-expenses-increases-input"
            name="year-one-operating-expenses-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.operating_expense_increases[0]"/>
     <input class="col-md-3 align-right"
            type="text"
+           id="year-two-operating-expenses-increases-input"
            name="year-two-operating-expenses-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.operating_expense_increases[1]"/>
     <input class="col-md-3 align-right"
            type="text"
+           id="year-three-operating-expenses-increases-input"
            name="year-three-operating-expenses-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.operating_expense_increases[2]"/>
     <input class="col-md-3 align-right"
            type="text"
+           id="year-four-operating-expenses-increases-input"
            name="year-four-operating-expenses-increases-input"
            format="percentage"
            decimals="1"
            ng-model="rental_property.income_and_cost_projection.operating_expense_increases[3]"/>
     <input class="col-md-3 align-right"
            type="text"
+           id="year-five-operating-expenses-increases-input"
            name="year-five-operating-expenses-increases-input"
            format="percentage"
            decimals="1"
