--- a/public/investment_properties_pages/operating_income_inputs.html
+++ b/public/investment_properties_pages/operating_income_inputs.html
@@ -6,6 +6,7 @@
     <span class="col-md-18">Vacancy Rate</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="vacancy-rate-input"
            name="vacancy-rate-input"
            format="percentage"
            decimals="1"
@@ -15,6 +16,7 @@
     <span class="col-md-18">Repairs and Maintenance</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="repairs-and-maintenance-input"
            name="repairs-and-maintenance-input"
            format="currency"
            symbol="$"
@@ -25,6 +27,7 @@
     <span class="col-md-18">Property Management Fees</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="property-management-fees-input"
            name="property-management-fees-input"
            format="percentage"
            decimals="1"
@@ -34,6 +37,7 @@
     <span class="col-md-18">Utilities</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="utilities-input"
            name="utilities-input"
            format="currency"
            ng-model="rental_property.operating_expenses_assumption.utilities"/>
@@ -42,6 +46,7 @@
     <span class="col-md-18">Taxes</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="taxes-input"
            name="taxes-input"
            format="currency"
            ng-model="rental_property.operating_expenses_assumption.taxes"/>
@@ -50,6 +55,7 @@
     <span class="col-md-18">Insurance</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="insurance-input"
            name="insurance-input"
            format="currency"
            ng-model="rental_property.operating_expenses_assumption.insurance"/>
@@ -58,6 +64,7 @@
     <span class="col-md-18">Salaries and Wages</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="salaries-and-wages-input"
            name="salaries-and-wages-input"
            format="currency"
            ng-model="rental_property.operating_expenses_assumption.salaries_and_wages"/>
@@ -66,6 +73,7 @@
     <span class="col-md-18">Water and Sewer</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="water-and-sewer-input"
            name="water-and-sewer-input"
            format="currency"
            ng-model="rental_property.operating_expenses_assumption.water_and_sewer"/>
@@ -74,6 +82,7 @@
     <span class="col-md-18">Trash Removal</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="trash-removal-input"
            name="trash-removal-input"
            format="currency"
            ng-model="rental_property.operating_expenses_assumption.trash_removal"/>
@@ -82,6 +91,7 @@
     <span class="col-md-18">Professional Fees</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="professional-fees-input"
            name="professional-fees-input"
            format="currency"
            ng-model="rental_property.operating_expenses_assumption.professional_fees"/>
@@ -90,6 +100,7 @@
     <span class="col-md-18">Advertising</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="advertising-input"
            name="advertising-input"
            format="currency"
            ng-model="rental_property.operating_expenses_assumption.advertising"/>
@@ -98,6 +109,7 @@
     <span class="col-md-18">Landscaping</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="landscaping-input"
            name="landscaping-input"
            format="currency"
            ng-model="rental_property.operating_expenses_assumption.landscaping"/>
@@ -106,6 +118,7 @@
     <span class="col-md-18">CapEx</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="capital-expenditures-input"
            name="capital-expenditures-input"
            format="percentage"
            decimals="1"
@@ -115,6 +128,7 @@
     <span class="col-md-18">Other Expenses</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="other-expenses-input"
            name="other-expenses-input"
            format="currency"
            ng-model="rental_property.operating_expenses_assumption.other_expenses"/>
@@ -123,6 +137,7 @@
     <span class="col-md-18">Income Tax Rate</span>
     <input class="col-md-6 align-right"
            type="text"
+           id="income-tax-rate-input"
            name="income-tax-rate-input"
            format="percentage"
            ng-model="rental_property.operating_expenses_assumption.income_tax_rate"/>
