--- a/public/investment_properties_pages/property_and_loan_information.html
+++ b/public/investment_properties_pages/property_and_loan_information.html
@@ -6,6 +6,7 @@
     <span class="col-md-18">Land Cost</span>
     <input class="col-md-6"
            type="text"
+           id="land-cost-input"
            name="land-cost-input"
            format="currency"
            symbol="$"
@@ -17,6 +18,7 @@
     <input class="col-md-6"
            type="text"
            name="building-cost-input"
+           id="building-cost-input"
            format="currency"
            symbol="$"
            decimals="0"
@@ -26,6 +28,7 @@
     <span class="col-md-18">Improvements</span>
     <input class="col-md-6"
            type="text"
+           id="improvements-input"
            name="improvements-input"
            format="currency"
            symbol="$"
@@ -36,6 +39,7 @@
     <span class="col-md-18">Total Square Feet</span>
     <input class="col-md-6"
            type="text"
+           id="total-square-feet-input"
            name="total-square-feet-input"
            format="number"
            ng-model="rental_property.financing_and_income_assumption.total_square_feet"/>
@@ -45,6 +49,7 @@
     <input class="col-md-6"
            type="text"
            format="number"
+           id="number-of-units-input"
            name="number-of-units-input"
            ng-model="rental_property.financing_and_income_assumption.number_of_units"/>
   </div>
@@ -52,6 +57,7 @@
     <span class="col-md-18">Average Monthly Rent</span>
     <input class="col-md-6"
            type="text"
+           id="average-monthly-rent-input"
            name="average-monthly-rent-input"
            format="currency"
            ng-model="rental_property.financing_and_income_assumption.average_monthly_rent_per_unit"/>
@@ -60,6 +66,7 @@
     <span class="col-md-18">Other Income</span>
     <input class="col-md-6"
            type="text"
+           id="other-income-input"
            name="other-income-input"
            format="currency"
            ng-model="rental_property.financing_and_income_assumption.other_monthly_income"/>
@@ -68,6 +75,7 @@
     <span class="col-md-18">Equity Percentage</span>
     <input class="col-md-6"
            type="text"
+           id="equity-percentage-input"
            name="equity-percentage-input"
            format="percentage"
            ng-model="rental_property.financing_and_income_assumption.equity_percentage"/>
@@ -76,6 +84,7 @@
     <span class="col-md-18">Loan Interest Rate</span>
     <input class="col-md-6"
            type="text"
+           id="loan-interest-rate-input"
            name="loan-interest-rate-input"
            format="percentage"
            decimals="3"
@@ -87,6 +96,7 @@
            type="text"
            format="number"
            decimals="0"
+           id="amortization-period-in-years-input"
            name="amortization-period-in-years-input"
            ng-model="rental_property.financing_and_income_assumption.amortization_period_in_years"/>
   </div>
